Work on newspaper setup

--- a/worklog/templates/newspaper/index.html
+++ b/worklog/templates/newspaper/index.html
@@ -14,7 +14,7 @@
 
 <ul>
     {% for log in news %}
-    <li>{{ log.id }}</li>
+    <li>{{ log.new_head }}</li>
         {% endfor %}
 </ul>
 {% endblock content %}
